
Note that this file only includes changes since Ice 3.2.1. For the
change history of prior releases, refer to the CHANGES file in the
subdirectory of each language mapping (e.g., cpp/CHANGES).


======================================================================
Changes since version 3.4.2
======================================================================

General Changes
===============

- Fixed IceGrid bug where the server deactivation timeout would be
  ignored if the server was not deactivated using the IceGrid
  administrative facility.


======================================================================
Changes since version 3.4.1
======================================================================


General Changes
===============

- The operation mode sent over the wire for the Object operations
  ice_ping, ice_isA, ice_ids, and ice_id should be Nonmutating, but
  the language mappings were inconsistent in this respect. All
  language mappings now send the correct mode.

- Fixed a bug where under certain circumstances, Ice would
  indefinitely re-try to add a proxy to the Glacier2 routing table.

- Improved queuing of Glacier2 requests to the client to not invoke
  requests if the client connection already has requests pending for
  send. Instead, Glacier2 waits for the pending requests to be
  sent. This allow request overriding to occur more often when the
  client connection is slow.

- Fixed bug where an IceGrid node or registry could hang for a long
  time on startup if some IceGrid registry replicas weren't reachable.

- Added throwLocalException method to the Ice AsyncResult class. If
  the request fails with a local exception, this method throws the
  local exception.

- Fixed a bug that caused a crash if a timeout occurs while sending
  an AMI request and if automatic retry is enabled (the default).

- It is now possible to use a constant as the default value for a data
  member. For example:

  // Slice
  const int MIN = 1;
