@@ -14,7 +14,7 @@ IceGridAdmin.Password=dummy
 # SSL Configuration
 #
 IceSSL.DefaultDir=certs
-IceSSL.TrustOnly.Client=CN="IceGrid Registry";CN="Glacier2"
+IceSSL.TrustOnly.Client=CN="Master";CN="Slave";CN="Glacier2"
 
 # C++ configuration
 Ice.Plugin.IceSSL.cpp=IceSSL:createIceSSL
