@@ -1,4 +1,9 @@
 #
+# The IceGrid locator proxy.
+#
+Ice.Default.Locator=DemoIceGrid/Locator:ssl -p 4062 -t 10000
+
+#
 # The IceGrid instance name.
 #
 IceGrid.InstanceName=DemoIceGrid
@@ -6,10 +11,17 @@ IceGrid.InstanceName=DemoIceGrid
 #
 # IceGrid registry configuration.
 #
-IceGrid.Registry.Client.Endpoints=tcp -p 4061 -t 10000:ssl -p 4062 -t 10000
+IceGrid.Registry.Client.Endpoints=tcp -p 14061 -t 10000:ssl -p 14062 -t 10000
 IceGrid.Registry.Server.Endpoints=ssl -t 10000
 IceGrid.Registry.Internal.Endpoints=ssl -t 10000
-IceGrid.Registry.Data=db/registry
+IceGrid.Registry.Data=db/slave
+IceGrid.Registry.ReplicaName=Slave
+
+#
+# Ensure that nodes connecting to this registry have a name matching
+# the certificate CN.
+#
+IceGrid.Registry.RequireNodeCertCN=1
 
 #
 # IceGrid admin clients must use a secure connection to connect to the
@@ -23,12 +35,12 @@ IceGrid.Registry.AdminPermissionsVerifier=DemoIceGrid/NullPermissionsVerifier
 #
 #Ice.Plugin.DB=IceGridSqlDB:createSqlDB
 #IceGrid.SQL.DatabaseType=QSQLITE
-#IceGrid.SQL.DatabaseName=db/registry/Registry.db
+#IceGrid.SQL.DatabaseName=db/slave/Registry.db
 
 #
 # Trace properties.
 #
-Ice.ProgramName=Registry
+Ice.ProgramName=Slave
 IceGrid.Registry.Trace.Node=2
 IceGrid.Registry.Trace.Replica=2
 
@@ -38,8 +50,8 @@ IceGrid.Registry.Trace.Replica=2
 Ice.Plugin.IceSSL=IceSSL:createIceSSL
 IceSSL.DefaultDir=certs
 IceSSL.CertAuthFile=ca_cert.pem
-IceSSL.CertFile=registry_cert.pem
-IceSSL.KeyFile=registry_key.pem
+IceSSL.CertFile=slave_cert.pem
+IceSSL.KeyFile=slave_key.pem
 
 #
 # Don't require certificates. This is useful for admin clients that don't
@@ -48,7 +60,7 @@ IceSSL.KeyFile=registry_key.pem
 #
 IceSSL.VerifyPeer=1
 
-IceSSL.TrustOnly.Client=CN="IceGrid Registry";CN="IceGrid Node";CN="Glacier2"
+IceSSL.TrustOnly.Client=CN="Master";CN="Slave";CN="Node";CN="Glacier2"
 IceSSL.TrustOnly.Server.IceGrid.Registry.Server=CN="Server"
-IceSSL.TrustOnly.Server.IceGrid.Registry.Internal=CN="IceGrid Node";CN="IceGrid Registry"
+IceSSL.TrustOnly.Server.IceGrid.Registry.Internal=CN="Node";CN="Master";CN="Slave"
 IceSSL.TrustOnly.Server.IceGrid.Registry.AdminSessionManager=CN="Glacier2"
