@@ -1,0 +1,1 @@
+# Dummy file, so that git retains this otherwise empty directory.
