@@ -8,7 +8,7 @@
 // **********************************************************************
 
 //
-// Generated by makeprops.py from file ..\config\PropertyNames.xml, Mon May 09 07:39:43 2011
+// Generated by makeprops.py from file ../config/PropertyNames.xml, Tue Jul 12 07:22:34 2011
 
 // IMPORTANT: Do not edit this file -- any edits made here will be lost!
 
@@ -325,6 +325,8 @@ public final class PropertyNames
         new Property("IceGrid\\.Registry\\.PermissionsVerifier", false, null),
         new Property("IceGrid\\.Registry\\.ReplicaName", false, null),
         new Property("IceGrid\\.Registry\\.ReplicaSessionTimeout", false, null),
+        new Property("IceGrid\\.Registry\\.RequireNodeCertCN", false, null),
+        new Property("IceGrid\\.Registry\\.RequireReplicaCertCN", false, null),
         new Property("IceGrid\\.Registry\\.Server\\.ACM", false, null),
         new Property("IceGrid\\.Registry\\.Server\\.AdapterId", false, null),
         new Property("IceGrid\\.Registry\\.Server\\.Endpoints", false, null),
